--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.17",
-        "@vitejs/plugin-vue": "^5.2.3",
+        "@inertiajs/vue3": "^2.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/vite": "^4.1.3",
+        "@vitejs/plugin-vue": "^5.0.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.17",
-        "vite": "^6.0.11"
+        "vite": "^6.0.11",
+        "vue": "^3.4.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^2.0.5",
         "@vueuse/core": "^13.0.0",
+        "tailwindcss": "^4.1.3",
         "vue": "^3.5.13"
     }
 }
