--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/vite": "^4.1.3",
         "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "daisyui": "^5.0.19",
         "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.3",
         "vite": "^6.0.11",
         "vue": "^3.4.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@heroicons/vue": "^2.2.0",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.0.5",
+        "@vuepic/vue-datepicker": "^11.0.2",
         "@vueuse/core": "^13.0.0",
-        "tailwindcss": "^4.1.3",
-        "vue": "^3.5.13"
+        "flowbite": "^3.1.2",
+        "vue": "^3.5.13",
+        "vue-datepicker": "^1.3.0",
+        "vue-datepicker-next": "^1.0.3"
     }
 }
